# hi

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust_ci.yml
src/: hi.rs  main.rs
