[package]
name = "hi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
argh = "0.1.13"
slack-hook = "0.8.0"
dotenv = "0.15.0"
base64 = "*"
hyper = "^0.14"
hyper-rustls = "^0.22"
hyper-native-tls = "0.3.0"
hyper-tls = "0.5.0"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = { version = "6.3.1", features=["service_account"] }
